# superbox.ai

./: .env.example  README.md  lambda.py  pyproject.toml
docs/: INSTALL.md
src/mcpbox/cli/: main.py  utils.py
src/mcpbox/cli/commands/: __init__.py  auth.py  init.py  inspect.py  pull.py  push.py  run.py  search.py  test.py
src/mcpbox/cli/scanners/: bandit.py  discovery.py  ggshield.py  sonarqube.py
src/mcpbox/server/: main.py
src/mcpbox/server/routes/: __init__.py  auth.py  payment.py  servers.py
src/mcpbox/server/templates/: auth.html  index.html
src/mcpbox/shared/: config.py  models.py  s3.py
src/superbox/server/: go.mod  main.go
src/superbox/server/handlers/: auth.go  health.go  payment.go  servers.go
src/superbox/server/helpers/: s3_helper.py
src/superbox/server/models/: types.go
